--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
 
 <div id="top">
 <div id="videoplayer">
-<!-- <video controls="" height="300" id="thevideo" width="550"><source src="${url}" type="video/mp4" /> -->
-<video controls="" height="300" id="thevideo" width="550"><source src="https://www.cs.cmu.edu/~cga/tmp-public/wpi-cmu-drc1-small.mp4" type="video/mp4" />
+<video controls="" height="300" id="thevideo" width="550"><source src="${url}" type="video/mp4" />
+<!-- <video controls="" height="300" id="thevideo" width="550"><source src="https://www.cs.cmu.edu/~cga/tmp-public/wpi-cmu-drc1-small.mp4" type="video/mp4" /> -->
 <h2><font color="red">This HIT requires html5 video support and your current browser does not support this. Please return this HIT.</font></h2>
 </video>
 <div><button id="timestampButton">Get Current Timestamp</button> <a id="timestampDisplay"></a></div>
